# noise-repellent

./: .agents.md  .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HOWTO.md  Makefile  README.md  appveyor.yml  build_meson.sh  denoise.c  denoise_gain.c  denoise_signal.c  doxygen.conf  envelope_follower.c  estimate_noise_spectrum.c  estimate_spectrum.c  extra_functions.c  extrafunctions.c  install.sh  manifest.ttl  masking.c  masking_thresholds.c  meson.build  meson_options.txt  nestim.c  noise-repellent.files  noise-repellent.spec  nrepel.c  nrepel.ttl  nrepel.ttl.in  spectral_processing.c  travis.yml
.agent/skills/create_lv2_plugin/: SKILL.md
.agent/skills/development_guidelines/: SKILL.md
.agent/skills/meson_build/: SKILL.md
.agent/workflows/: libspecbleach_integration.md  port_management.md
.ci/: make-binaries-win
.github/workflows/: build.yml
.travis/: make-binaries  make-binaries-linux  make-binaries-win
doc/: doxygen.conf
lv2ttl/: generate_ttl.sh  manifest.ttl.in  nrepel.ttl.in  nrepellent#stereo.ttl.in  nrepellent-2d#stereo.ttl.in  nrepellent-2d.ttl.in  nrepellent-adaptive#stereo.ttl.in  nrepellent-adaptive.ttl.in  nrepellent.ttl  nrepellent.ttl.in
meson/: win32.ini
nrepel/: nrepel.ttl
plugin/: nrepellent.c  plugin.c
plugins/: nrepellent-2d.c  nrepellent-adaptive.c  nrepellent.c
scripts/: make-binaries  make-binaries-win  make-binaries.sh  test-ttl.sh
setup/: win32.ini  win64.ini
snap/: snapcraft.yaml
src/: circular_buffer.c  data_types.h  denoise_gain.c  denoise_parameters.c  denoise_parameters.h  estimate_noise_spectrum.c  extra_functions.c  extra_functions.h  fft_denoiser.c  fft_denoiser.h  fft_processor.c  gain_estimator.c  gain_estimator.h  internal_data_types.h  masking.c  masking_estimator.c  masking_estimator.h  noise_estimator.c  noise_estimator.h  noise_profile.c  noise_profile.h  noise_profile_state.c  noise_profile_state.h  noise_repellent.c  noise_repellent.h  noise_repellent_state.c  nrepel.c  plugin.c  plugin_state.c  plugin_state.h  signal_crossfade.c  signal_crossfade.h  spectral_denoiser.c  spectral_denoiser.h  spectral_helper.h  spectral_processing.c  spectral_processor.c  spectral_processor.h  spectral_utils.c  spectral_utils.h  (+8 more)
subprojects/: libspecbleach.wrap
subprojects/libnrepel/: meson.build
subprojects/libnrepel/include/: noise_repellent.h  nrepel.h
subprojects/libnrepel/src/: noise_repellent.c  nrepel.c  nrepel_adaptive.c
subprojects/libnrepel/src/adaptivedenoiser/: adaptive_denoiser.c  adaptive_denoiser.h  louizou_estimator.c  louizou_estimator.h
subprojects/libnrepel/src/adaptivedenoiser/gainmodel/: gain_estimator.c  gain_estimator.h
subprojects/libnrepel/src/adaptivedenoiser/noisemodel/: noise_estimator.c  noise_estimator.h
subprojects/libnrepel/src/denoiser/: denoise_builder.c  denoise_builder.h  gain_estimator.c  gain_estimator.h  masking_estimator.c  masking_estimator.h  spectral_denoiser.c  spectral_denoiser.h  spectral_smoother.c  spectral_smoother.h  spectral_whitening.c  spectral_whitening.h  spectrum_smoother.h  spl_spectrum_converter.c  transient_detector.c  transient_detector.h
subprojects/libnrepel/src/denoiser/gainmodel/: gain_estimator.c  gain_estimator.h  masking_estimator.c  spectral_smoother.c  transient_detector.c  transient_detector.h
subprojects/libnrepel/src/denoiser/noisemodel/: louizou_estimator.c  noise_estimator.c  noise_estimator.h  noise_profile.c  noise_profile.h
subprojects/libnrepel/src/noisemodel/: louizou_estimator.c  louizou_estimator.h  noise_estimator.c  noise_estimator.h
subprojects/libnrepel/src/shared/: absolute_hearing_thresholds.c  absolute_hearing_thresholds.h  adaptive_noise_estimator.c  adaptive_noise_estimator.h  common.h  configurations.h  critical_bands.c  critical_bands.h  data_types.h  denoise_parameters.h  fft_transform.c  fft_transform.h  gain_estimators.c  gain_estimators.h  general_utils.c  general_utils.h  louizou_estimator.c  masking_estimator.c  masking_estimator.h  modules_configurations.h  noise_estimator.c  noise_estimator.h  noise_profile.c  noise_profile.h  oversubtraction_criterias.c  oversubtraction_criterias.h  signal_crossfade.c  signal_crossfade.h  spectral_features.c  spectral_features.h  spectral_processor.h  spectral_smoother.c  spectral_utils.c  spectral_utils.h  spectral_whitening.c  spl_spectrum_converter.c  spl_spectrum_converter.h  transient_detector.c
subprojects/libnrepel/src/stft/: stft_buffer.c  stft_buffer.h  stft_processor.c  stft_processor.h  stft_windows.c  stft_windows.h
subprojects/libspecbleach/: meson.build
subprojects/libspecbleach/include/: specbleach.h
subprojects/libspecbleach/src/: specbleach.c
subprojects/libspecbleach/src/adaptivedenoiser/: adaptive_denoiser.c  adaptive_denoiser.h
subprojects/libspecbleach/src/denoiser/: spectral_denoiser.c  spectral_denoiser.h
subprojects/libspecbleach/src/shared/: absolute_hearing_thresholds.c  absolute_hearing_thresholds.h  adaptive_noise_estimator.c  adaptive_noise_estimator.h  configurations.h  critical_bands.c  critical_bands.h  denoise_mixer.c  denoise_mixer.h  fft_transform.c  fft_transform.h  gain_estimators.c  gain_estimators.h  general_utils.c  general_utils.h  masking_estimator.c  masking_estimator.h  noise_estimator.c  noise_estimator.h  noise_profile.c  noise_profile.h  noise_scaling_criterias.c  noise_scaling_criterias.h  oversubtraction_criterias.c  oversubtraction_criterias.h  postfilter.c  postfilter.h  spectral_features.c  spectral_features.h  spectral_processor.h  spectral_smoother.c  spectral_smoother.h  spectral_utils.c  spectral_utils.h  spectral_whitening.c  spectral_whitening.h  transient_detector.c  transient_detector.h
subprojects/libspecbleach/src/stft/: stft_buffer.c  stft_buffer.h  stft_processor.c  stft_processor.h  stft_windows.c  stft_windows.h
